# traider

./: .env.example  .env.vps.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  pyproject.toml  requirements.txt
deploy/: README.md  docker-compose.yml  install_vps.sh  verify_vps.sh
docs/: arquitetura.md  dados.md  estrategias.md  goal_audit.md  paper_trading.md  score.md
scripts/: backup_db.py  build_catalog_report.py  build_verification_bundle.py  build_verification_manifest.py  check_deploy_readiness.py  dispatch_notifications_now.py  goal_acceptance_report.py  production_preflight.py  rebuild_memory.py  receipt_utils.py  run_api.py  run_backtest_batch.py  run_maintenance.py  run_scanner.py  run_scheduler.py  run_watchdog_loop.py  scan_now.py  seed_demo.py  send_telegram_canary.py  send_telegram_test.py  suppress_pending_notifications.py  validate_demo_assets.py  validate_deploy_artifacts.py  verify_filesystem_isolation.py  verify_ops_http_protection.py  verify_process_runtime.py  verify_systemd_runtime.py  verify_verification_bundle.py  verify_verification_round.py  watchdog_once.py
tests/: test_backtester.py  test_backup_service.py  test_batch_scanner.py  test_bcb_provider.py  test_brapi_provider.py  test_build_verification_bundle.py  test_build_verification_manifest.py  test_catalog_report.py  test_check_deploy_readiness.py  test_data_source_audit_service.py  test_demo_asset_sync.py  test_demo_assets.py  test_deploy_artifacts.py  test_goal_acceptance_report.py  test_heartbeat_service.py  test_maintenance_service.py  test_memory_engine.py  (+30 more)
(+75 files in other folders)
